Archive2/ca/9609b9ec3ab886/output
main.cpp: In function 'int main(int, const char**)':
main.cpp:26:42: error: no match for call to '(std::less<Test>) (Test*, Test*)'
   cout << l(&aCertainThing, things.data());
                                          ^
In file included from /usr/local/include/c++/5.2.0/string:48:0,
                 from /usr/local/include/c++/5.2.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.2.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.2.0/ios:42,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_function.h:386:7: note: candidate: constexpr bool std::less<_Tp>::operator()(const _Tp&, const _Tp&) const [with _Tp = Test]
       operator()(const _Tp& __x, const _Tp& __y) const
       ^
/usr/local/include/c++/5.2.0/bits/stl_function.h:386:7: note:   no known conversion for argument 1 from 'Test*' to 'const Test&'
